# PyQueryX

./: CHANGELOG.md  CONTRIBUTING.md  EzSQL.py  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
ezsql/: __init__.py
pyqueryx/: __init__.py
tests/: test_ezsql.py
