[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "PyQueryX"
version = "0.4.1"
description = "A friendly Python SQL toolkit with simple querying, config helpers, and DB-API connectivity."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "srinjan93306-ai" }
]
keywords = ["sql", "sqlite", "postgres", "mysql", "oracle", "database", "db-api", "query"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = []

[project.optional-dependencies]
postgres = ["pg8000>=1.30"]
mysql = ["mysql-connector-python>=8.0"]
oracle = ["oracledb>=2.0"]
all = [
    "pg8000>=1.30",
    "mysql-connector-python>=8.0",
    "oracledb>=2.0",
]

[project.urls]
Homepage = "https://github.com/srinjan93306-ai/PyQueryX"
Repository = "https://github.com/srinjan93306-ai/PyQueryX"
Issues = "https://github.com/srinjan93306-ai/PyQueryX/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyqueryx*", "ezsql*"]

[tool.setuptools]
py-modules = ["PyQueryX", "EzSQL"]

[tool.setuptools.package-data]
pyqueryx = ["py.typed"]
ezsql = ["py.typed"]
